--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "request": "^2.88.2",
+    "sweetalert": "^2.1.2",
     "url-parse": "^1.5.10"
   },
   "scripts": {
