--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5000",
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@fontsource/roboto": "^4.5.5",
     "@material-ui/core": "^4.12.4",
